fix(formative): theme questions scrollbar and messages view, fix bugs

--- a/styles/formative/catppuccin.user.css
+++ b/styles/formative/catppuccin.user.css
@@ -114,7 +114,9 @@
         color: @text;
       }
     }
-    
+    .avatar:hover {
+      box-shadow: @accent-color 0 0 0 1px;
+    }
     .MainAppHeader__RootDiv-sc-1gw0bt9-0 {
       background-color: @surface0;
     }
@@ -183,7 +185,13 @@
     .QuestionViewable__CorrectAnswerLabelDiv-sc-13jvio2-7,
     .MatchingTableRow__ArrowIcon-sc-1u9h4tb-1,
     .PracticeSet__StyledLastUpdated-sc-1wup6tb-8,
-    .MaterialIcon-sc-1g5xoi8-0 {
+    .MaterialIcon-sc-1g5xoi8-0,
+    .MinimalFormativeStudentHeader__FormativeTitleDiv-sc-14rcnaq-4,
+    .ErrorExplainer__SubTextHeading-sc-7nq4if-2,
+    .ErrorExplainer__MainTextHeading-sc-7nq4if-1,
+    .ErrorExplainer__TechnicalDetailsHeading-sc-7nq4if-3,
+    .ErrorExplainer__ErrorIdParagraph-sc-7nq4if-4,
+    .TeacherPacedStart__DetailsDiv-sc-1f4f5sd-4 {
       color: @text;
     }
     .RichText__RootReadOnlyDiv-sc-fjolxt-1 * {
@@ -240,7 +248,9 @@
       .ReactSelect__placeholder {
         color: @subtext0;
       }
-      .ReactSelect__indicator, .ReactSelect__single-value {
+      .ReactSelect__indicator,
+      .ReactSelect__single-value,
+      .ReactSelect__input-container {
         color: @text;
       }
       &:focus-within {
@@ -253,12 +263,18 @@
     .ReactSelect__menu {
       background: @surface2 !important;
       color: @text;
+      .SearchBarOption__RootLink-sc-191bb28-1:hover .SearchBarOption__TitleOverflowEllipsis-sc-191bb28-0 {
+        color: @accent-color;
+      }
       .ReactSelect__option--is-focused {
         background: @overlay0;
       }
       .ReactSelect__option--is-selected {
         background: @accent-color;
         color: @contrast-accent-color;
+      }
+      .ReactSelect__menu-notice {
+        color: @subtext0;
       }
     }
 
@@ -439,6 +455,16 @@
       }
     }
     .FormativeStudentHeader__NavStrip-sc-yw00ql-10 {
+      .FormativeStudentHeader__ScrollableDiv-sc-yw00ql-9 {
+        &::-webkit-scrollbar-track {
+          background: @surface0 !important;
+          border-color: @surface0 !important;
+        }
+        &::-webkit-scrollbar-thumb {
+          background: @overlay0 !important;
+          border-color: @overlay0 !important;
+        }
+      }
       background: @mantle;
       border-color: @overlay0;
       .selectedSection {
@@ -477,6 +503,9 @@
         .bDcnFV {
           background-color: @peach;
         }
+        svg {
+          path { stroke: @red; }
+        }
       }
     }
     .checkbox-root {
@@ -497,6 +526,9 @@
     }
     .FormativeItemViewable__RootDiv-sc-m0kwch-0 {
       background: @mantle;
+      .correct {
+        border-color: @green;
+      }
       &,
       .withFunctionalizedViewable__LeftColumn-sc-1636o2h-2,
       .withFunctionalizedViewable__RightColumn-sc-1636o2h-4 {
@@ -600,6 +632,15 @@
         }
       }
       .DragAndDropImageDropLocation__DropLocationContainerDiv-sc-oq3fcx-1 {
+        &:hover {
+          .DragAndDropImageDropLocationPoint-sc-1v0z50f-0 {
+            background: @surface1;
+            border-color: @surface1;
+          }
+          .dropzone-tip::before {
+            background: @surface1;
+          }
+        }
         .DragAndDropImageDropLocationPoint-sc-1v0z50f-0 {
           background: @surface0;
           border-color: @surface0;
@@ -608,6 +649,12 @@
           background: @surface0;
         }
         .dropzone {
+          &:hover, &.selected {
+            background: @surface1;
+            .dropzone-number {
+              background: @surface2 !important;
+            }
+          }
           border-color: @accent-color;
           background: @surface0;
           .dropzone-number {
@@ -908,6 +955,67 @@
     }
     .DividerWord__WordDiv-sc-59xl7-2 {
       color: @text;
+    }
+    .MinimalFormativeStudentHeader__RootDiv-sc-14rcnaq-0 {
+      border-color: @overlay0;
+    }
+    .FormativeItemViewable__FeedbackMessagesListDiv-sc-m0kwch-1 {
+      .FeedbackMessagesList__MessagesListDiv-sc-9o5dsw-0 {
+        background: @surface1;
+        .FeedbackMessagesList__EmptyDiv-sc-9o5dsw-1 svg {
+          path:nth-child(1) { fill: @yellow; }
+          path:nth-child(2) { fill: @green; }
+          path:nth-child(3) { fill: @mauve; }
+          path:nth-child(4) { stroke: @peach; }
+          path:nth-child(5) { stroke: @peach; }
+        }
+      }
+      .FeedbackMessage__FeedbackBoxDiv-sc-q3ku9d-2 {
+        background: @surface2;
+        border-color: @overlay2;
+      }
+      .FeedbackMessageComposer__RootDiv-sc-vs8711-0 {
+        border-color: @overlay0;
+        .FeedbackMessageComposer__RichTextContainerDiv-sc-vs8711-3 {
+          border-color: @overlay1;
+          color: @text;
+          .public-DraftEditorPlaceholder-inner {
+            color: @subtext0;
+          }
+        }
+      }
+    }
+    .Toolbar__RootDiv-sc-1e3lohg-0 {
+      border-color: @overlay0;
+      box-shadow: @overlay0 0 1px 3px 0;
+      &::before, &::after {
+        border-color: @surface2 transparent transparent;
+      }
+      &, .buttonWrapper button {
+        background: @surface2;
+      }
+      .buttonWrapper button {
+        &:hover {
+          background: @overlay0;
+        }
+        &.active {
+          color: @accent-color;
+          svg {
+            fill: @accent-color;
+          }
+        }
+        svg {
+          fill: @text;
+        }
+        color: @text;
+      }
+    }
+    .TeacherPacedStart__RootDiv-sc-1f4f5sd-0 {
+      background: @surface0 !important;
+    }
+    .FeedbackMessageIcon__UnreadJewelDiv-sc-1x1yblc-1 {
+      background: @red;
+      box-shadow: @text 0 0 0 2px;
     }
   }
 
